--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: python
 python:
   - "3.7"
 install:
-  - pip3 install -r requirements.txt
+  - pip install -r requirements.txt
+  - pip install flake8
 script:
   - python -m unittest
+  - flake8 --ignore=E501
