--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 dist: xenial
 language: python
 python:
+  - "3.6"
   - "3.7"
+
 install:
-  - pip install -r requirements.txt
-  - pip install flake8
+  - pip install coveralls tox-travis
+
 script:
-  - python -m unittest
-  - flake8 --ignore=E501
+  - tox
+
+after_success:
+  - coveralls
