--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,12 @@ envlist = py36,py37
 #skipsdist = true
 
 [testenv]
-deps = flake8
+deps =
+    flake8
+    coverage
 
 commands =
-    python -m unittest
+    coverage run --source=. -m unittest
     flake8
 
 [flake8]
