--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     coverage
 
 commands =
-    coverage run --omit=setup.py,*/.tox/* -m unittest
+    coverage run --include=tests/test*,wikiwall.py -m unittest
     flake8
 
 [flake8]
