--- a/Pipfile
+++ b/Pipfile
@@ -11,11 +11,15 @@ tox = "*"
 coverage = "*"
 
 [packages]
-tqdm = "*"
-click = "*"
-requests = "*"
-lxml = "*"
-sphinx = "*"
+tqdm = "==4.31.1"
+click = "==7.0"
+requests = "==2.21.0"
+lxml = "==4.3.3"
+certifi = "==2019.3.9"
+chardet = "==3.0.4"
+idna = "==2.8"
+urllib3 = "==1.24.2"
+Sphinx = "*"
 
 [requires]
 python_version = "3.7"
